# open-finance-infrastructure/src/main/java/com/enterprise/openfinance/bulkpayments/infrastructure/rest/BulkPaymentsController.java
@@ -63,6 +63,7 @@ public class BulkPaymentsController {
                 data.fileName(),
                 data.fileContent(),
                 data.fileHash(),
+                data.currency(),
                 BulkIntegrityMode.fromApiValue(data.integrityMode()),
                 interactionId
         );
